# MarsBench

./: .gitignore  .pre-commit-config.yaml  Classification.py  EXAMPLES.md  README.md  REFACTOR.md  download.py  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml  pytest.yml.disabled
benchmark/: earth_data_prep.py  get_data.py  mappings.json  plot_classification_few_shot_results.py  plot_classification_partition_results.py  plot_classification_results.py  plot_earth_data_results.py  plot_segmentation_partition_results.py  plot_segmentation_results.py  plot_tools.py
benchmark/data/: classification_few_shot_filtered.csv  classification_filtered.csv  classification_partition_filtered.csv  earth_data.csv  segmentation_filtered.csv  segmentation_partition_filtered.csv
benchmark/data/classification_few_shot_violin_output/: normalizer.json  partition_stats.csv
benchmark/data/classification_partition_violin_output/: normalizer.json  partition_stats.csv
benchmark/data/classification_violin_output/: aggregated_bootstrap.csv  normalizer.json  per_dataset_bootstrap.csv
benchmark/data/earth_data_output/: earth_data_stats.csv
benchmark/data/segmentation_partition_violin_output/: normalizer.json  partition_stats.csv
benchmark/data/segmentation_violin_output/: aggregated_bootstrap.csv  normalizer.json  per_dataset_bootstrap.csv
configs/: config.yaml
configs/callbacks/: default.yaml
configs/criterion/: cross_entropy.yaml
configs/data/: ConeQuest.yaml  ConeQuest_detect.yaml  HiRISENet.yaml  MSLNet.yaml  Mars_Dust_Devil.yaml  conequest_detect.yaml  deepmars_landmark.yaml  deepmars_surface.yaml  domars16k.yaml  mars_dust_devil.yaml  martianfrost.yaml
configs/data/classification/: domars16k.yaml
configs/data/detection/: cone_quest.yaml  mars_dust_devil.yaml
configs/data/segmentation/: cone_quest.yaml
configs/logger/: default.yaml
configs/model/: deeplab.yaml  default.yaml  detr.yaml  efficientdet.yaml  fasterrcnn.yaml  inceptionv3.yaml  resnet18.yaml  resnet50.yaml  retinanet.yaml  squeezenet.yaml  ssd.yaml  swin_transformer.yaml  unet.yaml  vit.yaml
configs/model/classification/: inceptionv3.yaml  resnet18.yaml  resnet50.yaml  squeezenet.yaml  swin_transformer.yaml  vit.yaml
configs/model/detection/: detr.yaml  ssd.yaml  (+3 more)
configs/optimizer/: adam.yaml
configs/test/: default.yaml  test.yaml
configs/training/: dev.yaml  test.yaml
configs/transforms/: default.yaml
data/: data.py
examples/: classification.ipynb
legacy_code/: Classification.py  download.py
legacy_code/data/: data.py
legacy_code/utils/: models.py  train.py  utils.py  val.py
marsbench/: main.py
marsbench/configs/: __init__.py  config.yaml
marsbench/data/: __init__.py  mars_datamodule.py
marsbench/models/: __init__.py
marsbench/training/: __init__.py  callbacks.py  execution.py  model_setup.py  results.py
marsbench/utils/: config_mapper.py  detect_metrics.py  detr_box_ops.py  detr_criterion.py  detr_matcher.py  detr_util_misc.py  load_mapping.py  logger.py  seed.py  transforms.py
marsbench/vlm/: chatgpt.py  gemini.py
sbatch/: classification.sh  detection.sh  sd35large.sbatch  segmentation.sh  test.sh
scripts/: classification_csv_annot_refactor.ipynb
src/: main.py
src/data/: __init__.py  mars_datamodule.py
src/models/: __init__.py
src/utils/: config_mapper.py  detr_criterion.py  detr_matcher.py  detr_util_misc.py  seed.py  transforms.py
tests/: conftest.py  test_config_mapper.py  test_datasets.py  test_main.py  test_mars_datamodule.py  test_models.py  test_training.py  test_transforms.py
tests/utils/: __init__.py  dataset_test_utils.py  detect_model_test_utils.py  model_test_utils.py
utils/: models.py  train.py  utils.py  val.py
vlm_playground/: gemini.ipynb
(+144 files in other folders)
