[metadata]
name = MarsBench
description = A benchmarking suite for composition in machine learning models
version = 0.1.0

[options]
packages = find:
python_requires = >=3.6

[flake8]
max-line-length = 120
extend-ignore = E203, W503, E402, F403
ignore-long-lines = ^\s*#|^\s*"{3}|^\s*'{3}
per-file-ignores =
    tests/*.py: F401

[isort]
profile = black
force_single_line = true
